2010-02-17  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/comments.php: 
	* barecity_1.5/style.css: Gravatar support added.

2010-01-21  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/style.css: Added left, right and centered. Img.

2010-01-13  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/style.css: Centering.
	* barecity_1.5/footer.php: Copyright updated.
	* .gitignore: File added. Ignores *.swp

2010-01-02  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/index.php, 
	  barecity_1.5/style.css,
	  barecity_1.5/shortcut-icon.png: Added url-shortener.

2009-12-30  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/style.css: Font updated for h2 in sidebar.

2009-12-30  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/style.css: font-weight changes, sidebar headers were
	not "visible".

2009-12-30  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/header.php: Removed commented code.
	* barecity_1.5/mariocarrion.xcf: Original gimp image.

2009-12-30  Mario Carrion  <mario@carrion.mx>

	* Initial import.